--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,13 @@
-body {
+* {
+  padding: 0;
   margin: 0;
+}
+
+:root {
+  --main-color: #e040fb;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +15,52 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.paper {
+  box-shadow: 0 0 5px #aaa;
+  width: 85%;
+  padding: 50px;
+  margin: 50px auto;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+input, textarea {
+  margin-bottom: 20px;
+  padding: 0 5px;
+}
+
+input {
+  height: 30px;
+}
+
+textarea {
+  margin-bottom: 20px;
+  height: 100px;
+  resize: none;
+  padding: 5px;
+}
+
+input:focus, textarea:focus {
+  outline: none;
+  border: 1px solid var(--main-color);
+}
+
+input[type="submit"] {
+  color: #fff;
+  background: var(--main-color);
+  width: 100px;
+  height: auto;
+  padding: 10px 0;
+  border: 1px solid var(--main-color);
+  cursor: pointer;
+  margin-bottom: 0;
+  transition: 0.3s all linear;
+}
+
+input[type="submit"]:hover {
+  color: var(--main-color);
+  background: #fff;
 }
