Back home button

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -193,3 +193,11 @@ button.cancel {
 .fields input {
   width: 48%;
 }
+
+.back-btn {
+  background: var(--main-color);
+  color: #fff;
+  padding: 5px 25px;
+  position: absolute;
+  left: 20px;
+}
